# wet-elephant-sound2

./: .gitignore  App.py  Dockerfile  JTools.py  README.md  config.env.sample  cronfile  docker-compose.yml  nginx_website.conf  requirements.txt  run.sh  setup.cfg  setup.py  start_service_for_test.sh  stop_service_for_test.sh  uwsgi.ini  指令.txt  測試方法.txt
flaskr/: Config.py  __init__.py
flaskr/Controllers/api/: TTS.py
flaskr/Model/: JException.py  TTS.py
flaskr/TTS/: test_all.py  train.txt
flaskr/TTS/models/: modules.py  tacotron.py
flaskr/TTS/pinyin/: parse_text_to_pyin.py
flaskr/TTS/util/: hparams.py  plot_alignment.py  symbols.py  text.py
flaskr/Utility/: ResponseTemplate.py
flaskr/Values/: Locales.py  strings_en.py
flaskr/key/: createKey.py
flaskr/templates/: index.html
host_tasks/: LogsCleaner.py
tasks/: TTS.py  __init__.py  celeryconfig.py
