[metadata]
name = flaskr
version = 1.0.0
# url = https://flask.palletsprojects.com/tutorial/
maintainer = jack850628
maintainer_email = jack850628@gmail.com
description = pikapi and dasi gashapon machine

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr